product tabs spacing fix

--- a/src/assets/styles/04-components/home-blocks.scss
+++ b/src/assets/styles/04-components/home-blocks.scss
@@ -199,7 +199,7 @@
 
 .s-block--special-products{
   .tabs{
-    @apply mb-4 sm:mb-8 space-s-2 md:space-s-8 whitespace-nowrap overflow-x-auto;
+    @apply mb-4 sm:mb-0 space-s-2 md:space-s-8 whitespace-nowrap overflow-x-auto;
 
     &__item{
       @apply flex-1 gap-2.5 sm:gap-8;
